<resources>
    <string name="app_name">UE Portal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="univ_title">University_of_Education</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="coursesNames">Courses</string>
    <string name="time">16 Feb 2019</string>
    <string name="time_table">Time Table</string>
    <string name="admissions">Admissions are currently closed.</string>
    <string name="sports">Sports week is starting from 16 Feb</string>
    <string name="uploadedTime">Uploaded time here</string>
    <string name="dashboard">Home Page</string>
    <string name="event">Events</string>
    <string name="courses">Courses</string>
    <string name="cgp">"    " GPA \n Calculator</string>
    <string name="gp">GPA \n Calculator</string>
    <string name="faculty">"  " View \n Faculty</string>
    <string name="communicate">Communicate</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="web">Our Website</string>
    <string name="apply">"" Apply \nOnline</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="roll_no">Roll No.</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_here">Register Here.</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
