<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_phone"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_our_website"
                android:icon="@drawable/ic_website"
                android:title="@string/web" />

        </menu>
    </item>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>

    </item>

</menu>
