<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aed581">

    <ImageView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="400dp"
        android:src="@drawable/ue_image"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/email"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_lock"
            android:hint="@string/password"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_lock" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_confirm_lock"
            android:hint="@string/confirm_password"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_confirm_lock" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="12dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_first_name"
            android:hint="@string/first_name"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_last_name"
            android:hint="@string/last_name"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_last_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_roll_no"
            android:hint="@string/roll_no"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_roll_no" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/full_rounded_login"
        android:ems="14"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />


</android.support.constraint.ConstraintLayout>