<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aed581">

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="255dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ue_image"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/full_rounded_login"
        android:ems="18"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

    <TextView
        android:id="@+id/btn_first_register"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_key"
            android:hint="@string/password"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_key" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="203dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/email"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_email" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>